--- a/contact.html
+++ b/contact.html
@@ -46,8 +46,8 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-white display-4" href="index.html" data-toggle="dropdown-submenu" aria-expanded="false">
-                        Services</a> <div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="lighting.html">Lighting</a><a class="dropdown-item text-white display-4" href="lighting.html#header16-28" aria-expanded="false">Power Points</a><a class="dropdown-item text-white display-4" href="blinds.html" aria-expanded="false">Blinds</a><a class="dropdown-item text-white display-4" href="security.html" aria-expanded="false">Security</a><a class="dropdown-item text-white display-4" href="irrigation.html" aria-expanded="false">Irrigation</a><a class="dropdown-item text-white display-4" href="thermostat.html" aria-expanded="false">Thermostat</a><a class="dropdown-item text-white display-4" href="page9.html#top" aria-expanded="false">Multimedia</a></div></li><li class="nav-item">
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-white display-4" href="power.html" data-toggle="dropdown-submenu" aria-expanded="false">
+                        Services</a>   <div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="lighting.html">Lighting</a><a class="dropdown-item text-white display-4" href="lighting.html#header16-28" aria-expanded="false">Power Points</a><a class="dropdown-item text-white display-4" href="blinds.html" aria-expanded="false">Blinds</a><a class="dropdown-item text-white display-4" href="security.html" aria-expanded="false">Security</a><a class="dropdown-item text-white display-4" href="irrigation.html" aria-expanded="false">Irrigation</a><a class="dropdown-item text-white display-4" href="thermostat.html" aria-expanded="false">Thermostat</a> <a class="dropdown-item text-white display-4" href="thermostat.html" aria-expanded="false">Thermostat</a><a class="dropdown-item text-white display-4" href="page9.html#top" aria-expanded="false">Multimedia</a></div></li><li class="nav-item">
                     <a class="nav-link link text-white display-4" href="pricing.html">
                         Pricing</a>
                 </li><li class="nav-item"> <a class="nav-link link text-white display-4" href="contact.html">Contact Us</a> </li></ul>
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section class="header1 cid-spaxVY7aMn" id="header16-n">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="header1 cid-spaxVY7aMn" id="header16-n">
 
     
 
@@ -91,14 +91,9 @@
                     <br>Email: andrewgostin@hotmail.com &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<br>Phone: +61 414350590 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<br><br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
-                <p class="mbr-text">
-                    <strong>Links</strong>
+                <p class="mbr-text"><strong>Feedback</strong>
                     <br>
-                    <br><br>
-                    <br><strong>Feedback</strong>
-                    <br>
-                    <br>Please send us your ideas, bug reports, suggestions! Any feedback would be appreciated.
-                </p>
+                    <br>Please send us your ideas, bug reports, suggestions! Any feedback would be appreciated.</p>
             </div>
             <div class="col-12 col-md-6">
                 <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCx3d07zxHPLvkFBLlAR3Ng8a9wsAsGoJ8&amp;q=place_id:ChIJn6wOs6lZwokRLKy1iqRcoKw" allowfullscreen=""></iframe></div>
@@ -113,7 +108,7 @@
             <div class="media-container-row mbr-white">
                 <div class="col-sm-6 copyright">
                     <p class="mbr-text mbr-fonts-style display-7">
-                        © Copyright 2020 Fufu - All Rights Reserved
+                        © Copyright 2020 Pupu - All Rights Reserved
                     </p>
                 </div>
                 <div class="col-md-6">
