--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-white display-4" href="index.html" data-toggle="dropdown-submenu" aria-expanded="false">
-                        Services</a> <div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="lighting.html">Lighting</a><a class="dropdown-item text-white display-4" href="lighting.html#header16-28" aria-expanded="false">Power Points</a><a class="dropdown-item text-white display-4" href="blinds.html" aria-expanded="false">Blinds</a><a class="dropdown-item text-white display-4" href="security.html" aria-expanded="false">Security</a><a class="dropdown-item text-white display-4" href="irrigation.html" aria-expanded="false">Irrigation</a><a class="dropdown-item text-white display-4" href="thermostat.html" aria-expanded="false">Thermostat</a><a class="dropdown-item text-white display-4" href="page9.html#top" aria-expanded="false">Multimedia</a></div></li><li class="nav-item">
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-white display-4" href="power.html" data-toggle="dropdown-submenu" aria-expanded="false">
+                        Services</a>   <div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="lighting.html">Lighting</a><a class="dropdown-item text-white display-4" href="lighting.html#header16-28" aria-expanded="false">Power Points</a><a class="dropdown-item text-white display-4" href="blinds.html" aria-expanded="false">Blinds</a><a class="dropdown-item text-white display-4" href="security.html" aria-expanded="false">Security</a><a class="dropdown-item text-white display-4" href="irrigation.html" aria-expanded="false">Irrigation</a><a class="dropdown-item text-white display-4" href="thermostat.html" aria-expanded="false">Thermostat</a> <a class="dropdown-item text-white display-4" href="thermostat.html" aria-expanded="false">Thermostat</a><a class="dropdown-item text-white display-4" href="page9.html#top" aria-expanded="false">Multimedia</a></div></li><li class="nav-item">
                     <a class="nav-link link text-white display-4" href="pricing.html">
                         Pricing</a>
                 </li><li class="nav-item"> <a class="nav-link link text-white display-4" href="contact.html">Contact Us</a> </li></ul>
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="cid-sqASloPFoy mbr-fullscreen mbr-parallax-background" id="header2-37">
+<section class="engine"><a href="https://mobirise.info/i">website creation software</a></section><section class="cid-sqASloPFoy mbr-fullscreen mbr-parallax-background" id="header2-37">
 
     
 
@@ -125,7 +125,7 @@
                     </div>                
 
                     <div class="card-box">
-                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">Connect to any object in your connected home from anywhere in the world via HomeKit</p>
+                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">Connect to any component in your connected home from anywhere in the world via HomeKit.</p>
                     </div>
                 </div>
 
