--- a/index22.html
+++ b/index22.html
@@ -47,16 +47,13 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown"> <a class="nav-link link dropdown-toggle text-white display-4" href="power.html" data-toggle="dropdown-submenu" aria-expanded="false">
-                        Services</a>    <div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="lighting.html">Lighting</a><a class="dropdown-item text-white display-4" href="power.html" aria-expanded="false">Power Points</a><a class="dropdown-item text-white display-4" href="blinds.html" aria-expanded="false">Blinds</a><a class="dropdown-item text-white display-4" href="irrigation.html" aria-expanded="false">Irrigation</a><a class="dropdown-item text-white display-4" href="thermostat2.html" aria-expanded="false">Thermostat</a> <div class="dropdown"><a class="dropdown-item text-white dropdown-toggle display-4" href="security.html" aria-expanded="false" data-toggle="dropdown-submenu">Security</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item text-white display-4" href="security.html" aria-expanded="false">Alarm</a><a class="dropdown-item text-white display-4" href="smokeys.html" aria-expanded="false">Smoke Detection</a><a class="dropdown-item text-white display-4" href="doorlocks.html" aria-expanded="false">Doorlocks</a></div></div></div></li><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="pricing.html">
-                        Pricing</a>
-                </li><li class="nav-item"> <a class="nav-link link text-white display-4" href="contact.html">Contact Us</a> </li></ul>
+                        Services</a>    <div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="lighting.html">Lighting</a><a class="dropdown-item text-white display-4" href="power.html" aria-expanded="false">Power Points</a><a class="dropdown-item text-white display-4" href="blinds.html" aria-expanded="false">Blinds</a><a class="dropdown-item text-white display-4" href="irrigation.html" aria-expanded="false">Irrigation</a><a class="dropdown-item text-white display-4" href="thermostat2.html" aria-expanded="false">Thermostat</a> <div class="dropdown"><a class="dropdown-item text-white dropdown-toggle display-4" href="security.html" aria-expanded="false" data-toggle="dropdown-submenu">Security</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item text-white display-4" href="security.html" aria-expanded="false">Alarm</a></div></div></div></li><li class="nav-item"> <a class="nav-link link text-white display-4" href="contact.html">Contact Us</a> </li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="cid-spUDIETPKP mbr-fullscreen mbr-parallax-background" id="header2-25">
+<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="cid-spUDIETPKP mbr-fullscreen mbr-parallax-background" id="header2-25">
 
     
 
