--- a/page12.html
+++ b/page12.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="header1 cid-ssrYZA9je2" id="header16-46">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="header1 cid-ssrYZA9je2" id="header16-46">
 
     
 
