--- a/power.html
+++ b/power.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple web templates</a></section><section class="header1 cid-ssqChqcvDx" id="header16-3d">
+<section class="engine"><a href="https://mobirise.info/q">responsive site templates</a></section><section class="header1 cid-ssqChqcvDx" id="header16-3d">
 
     
 
