--- a/smokeys.html
+++ b/smokeys.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="header1 cid-ssrVFC1taH" id="header16-43">
+<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="header1 cid-ssrVFC1taH" id="header16-43">
 
     
 
