--- a/thermostat2.html
+++ b/thermostat2.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="header1 cid-ssrQT3UV36" id="header16-3w">
+<section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><section class="header1 cid-ssrQT3UV36" id="header16-3w">
 
     
 
