--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                        <img src="assets/images/output-onlinepngtools-1-removebg-preview-2-96x88.png" alt="Mobirise" title="" style="height: 3.8rem;">
+                        <img src="assets/images/output-onlinepngtools-1-removebg-preview-2-96x88.png" alt="House-mate" title="" style="height: 3.8rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="index.html">
@@ -137,7 +137,7 @@
             </div>
 
             <div class="mbr-figure m-auto" style="width: 50%;">
-                <img src="assets/images/b-1-982x486.jpg" alt="Mobirise" title="">
+                <img src="assets/images/b-1-982x486.jpg" alt="House-mate" title="">
             </div>
 
             <div class="block-content align-left">
@@ -219,7 +219,7 @@
             </div>
 
             <div class="mbr-figure m-auto" style="width: 50%;">
-                <img src="assets/images/a-1-982x552.jpg" alt="Mobirise" title="">
+                <img src="assets/images/a-1-982x552.jpg" alt="House-mate" title="">
             </div>
 
             <div class="block-content align-left">
