--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
 <html>
 <head>
 <link rel="canonical" href="https://house-mate.com.au/" />
+<meta property="og:title" content="House-mate Smart Home Automation">
+<meta property="og:description" content="Affordable and centralised home automation using Apple HomeKit. Convenience, security, and peace of mind with a smart home by House-mate.">
+<meta property="og:image" content="https://house-mate.com.au/assets/images/og-image-facebook.png">
+<meta property="og:url" content="https://house-mate.com.au">
+<meta name="twitter:title" content="House-mate Smart Home Automation">
+<meta name="twitter:description" content="Affordable and centralised home automation using Apple HomeKit. Convenience, security, and peace of mind with a smart home by House-mate.">
+<meta name="twitter:url" content="https://house-mate.com.au/assets/images/twitter-image.png">
+<meta name="twitter:card" content="House-mate are innovative home automation architects based in Melbourne Australia">
 <link rel="apple-touch-icon" sizes="180x180 href="https://house-mate.com.au/assets/images/apple-touch-icon-180x180.png">
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-224447802-1">
@@ -13,6 +21,8 @@
   gtag('js', new Date());
   gtag('config', 'UA-224447802-1');
 </script>
+
+
   <!-- Site made with Mobirise Website Builder v4.12.4, https://mobirise.com -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
