--- a/index.html
+++ b/index.html
@@ -49,12 +49,9 @@
   
 </head>
 <body>
-  <section class="menu cid-sqASln05x4" once="menu" id="menu2-36">
-
-    
-
-    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top navbar-toggleable-sm">
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<section class="menu cid-sqASln05x4" once="menu" id="menu2-36">
+<nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top navbar-toggleable-sm">
+<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" rel="noopener noreferrer">
             <div class="hamburger">
                 <span></span>
                 <span></span>
