--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <meta name="twitter:url" content="https://house-mate.com.au/assets/images/twitter-image.png">
 <meta name="twitter:card" content="House-mate are innovative home automation architects based in Melbourne Australia">
 <link rel="apple-touch-icon" sizes="180x180 href="https://house-mate.com.au/assets/images/apple-touch-icon-180x180.png">
+<link rel="apple-touch-icon" href="https://house-mate.com.au/assets/images/apple-touch-icon.png">
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-224447802-1">
 </script>
