--- a/security.html
+++ b/security.html
@@ -147,7 +147,7 @@
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
                             Door and window sensors</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Secure the perimeter of your home automatically when you go to bed. Door and window sensors are a very effective way to arm the home and can be hard-wired or run on battery.</p>
+                        <p class="mbr-text mbr-fonts-style display-7">Secure the perimeter of your home automatically when you go to bed. Door and window sensors are a very effective way to arm the home and can be hard-wired or run on battery.<br><br>We work with and recommend <a href="https://bpointcomms.com.au" target="_blank">BPoint Security</a>&nbsp;for alarm system installations and monitoring.</p>
                     </div>
                 </div>
             </div>
@@ -193,7 +193,7 @@
             
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">
-                    <br>© Copyright 2022 House-mate Automations</p>
+                    <br>© Copyright 2022 House-Mate Automations<br>Partners <a href="https://blrsolutions.com.au" target="_blank">BLR Solutions</a> and <a href="https://bpointcomms.com.au" target="_blank">BPoint Security</a></p>
             </div>
         </div>
     </div>
