--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <html>
 <head>
-<link rel="canonical" href="https://house-mate.com.au/" />
+<link rel="canonical" href="https://house-mate.com.au/index.html" />
 <meta property="og:title" content="House-mate Smart Home Automation">
 <meta property="og:description" content="Affordable and centralised home automation using Apple HomeKit. Convenience, security, and peace of mind with a smart home by House-mate.">
 <meta property="og:image" content="https://house-mate.com.au/assets/images/og-image-facebook.png">
